# anemoi

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  example_config.yml  pyproject.toml  setup.py
.github/workflows/: check.yaml  publish.yaml
anemoi/: cli.py  client.py  operator.py  server.py  util.py
anemoi/backends/: __init__.py  database.py  db.py  tinydb.py
anemoi/providers/: __init__.py  cloudflare.py  porkbun.py
